k8s/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bloodmate-backend
spec:
  replicas: 2 
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1      
      maxUnavailable: 0 
  selector:
    matchLabels:
      app: bloodmate
  template:
    metadata:
      labels:
        app: bloodmate
    spec:
      containers:
      - name: bloodmate-app
        image: farhanraju/bloodmate-backend:latest
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /           
            port: 3000
          initialDelaySeconds: 15 
          periodSeconds: 10      
        readinessProbe:
          httpGet:
            path: /           
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5 
        volumeMounts:
        - name: upload-storage
          mountPath: /app/uploads
      volumes:
      - name: upload-storage
        persistentVolumeClaim:
          claimName: bloodmate-pvc
