k8s/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: bloodmate-service
spec:
  type: NodePort
  selector:
    app: bloodmate
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30007
